<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/Login_UserName"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="Autofill,RtlSymmetry" />

    <EditText
        android:id="@+id/Login_Password"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:textSize="16sp"
        android:layout_marginTop="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_UserName"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="Autofill,RtlSymmetry" />

    <Button
        android:id="@+id/Login"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_corners"
        android:drawableLeft="@drawable/icon_btn"
        android:fontFamily="sans-serif"
        android:paddingLeft="22dp"
        android:text="@string/login"
        android:layout_marginTop="34dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_Password"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="MissingConstraints,RtlHardcoded,RtlSymmetry,UsingOnClickInXml" />

    <TextView
        android:id="@+id/Login_ForgetPswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:onClick="Forgotten_Pswd"
        android:text="@string/forgotten_password"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login"
        app:layout_constraintVertical_bias="0.033"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>