<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".A2_Forgotten_Password">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="197dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".27"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/main_screen_bg"
        tools:ignore="ContentDescription,MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="411dp"
        android:layout_height="622dp"
        android:background="@drawable/curve_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.85"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/UserName"
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="104dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="Autofill,MissingConstraints,RtlSymmetry" />

        <EditText
            android:id="@+id/Enter_Code"
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="108dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/write_your_code_here"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Login_Button_1"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="Autofill,MissingConstraints,RtlSymmetry" />

        <Button
            android:id="@+id/Login_Button_1"
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@drawable/blue_corners"
            android:drawableLeft="@drawable/icon_btn"
            android:fontFamily="sans-serif"
            android:paddingLeft="22dp"
            android:text="@string/send_me_code"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/UserName"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="MissingConstraints,RtlHardcoded,RtlSymmetry,UsingOnClickInXml" />

        <Button
            android:id="@+id/Login_Button_2"
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@drawable/blue_corners"
            android:drawableLeft="@drawable/icon_btn"
            android:fontFamily="sans-serif"
            android:paddingLeft="22dp"
            android:text="@string/submit_code"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Enter_Code"
            app:layout_constraintVertical_bias="0.079"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="MissingConstraints,RtlHardcoded,RtlSymmetry,UsingOnClickInXml" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/market_land"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>