<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/curve_bg"
    tools:context=".A2_Admin">

    <EditText
        android:id="@+id/Admin_Name"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/admin_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="23dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/Admin_ID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="Autofill,RtlSymmetry" />

    <EditText
        android:id="@+id/Admin_ID"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/admin_id"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/Admin_Pswd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Admin_Name"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="Autofill,RtlSymmetry"
        android:inputType="text" />

    <EditText
        android:id="@+id/Admin_Pswd"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/Admin_Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Admin_ID"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="Autofill,RtlSymmetry" />

    <Button
        android:id="@+id/Admin_Login"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="220dp"
        android:background="@drawable/blue_corners"
        android:drawableLeft="@drawable/icon_btn"
        android:fontFamily="sans-serif"
        android:paddingLeft="20dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Admin_Pswd"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="RtlHardcoded,RtlSymmetry,UsingOnClickInXml" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="480dp"
        android:layout_height="180dp"
        android:layout_marginTop="-30dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/Admin_Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/admin"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>